k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: godblessyou-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: godblessyou-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
