k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: godblessyou-app
spec:
  selector:
    app: godblessyou-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
